[dozmod] Implement action log subpage

--- a/modules-available/dozmod/lang/de/template-tags.json
+++ b/modules-available/dozmod/lang/de/template-tags.json
@@ -1,6 +1,9 @@
 {
+    "lang_actionTarget": "Aktionsziel",
     "lang_asteriskRequired": "Felder mit (*) sind erforderlich",
     "lang_canLogin": "Nutzer dieser Einrichtung k\u00f6nnen sich am Satelliten anmelden",
+    "lang_createTime": "Erstellt",
+    "lang_currentFilter": "Aktueller Filter",
     "lang_defaultImagePermissionAdmin": "Administrieren",
     "lang_defaultImagePermissionDownload": "Download",
     "lang_defaultImagePermissionEdit": "Bearbeiten",
@@ -13,15 +16,19 @@
     "lang_descriptionPermissionConfig": "Dies sind die Berechtigungen, die ein Benutzer standardm\u00e4\u00dfig f\u00fcr fremde VMs\/Veranstaltungen hat. Sie werden angewandt, wenn der Besitzer keine anderweitigen Berechtigungen w\u00e4hlt.",
     "lang_descriptionRuntimeLimits": "Hier k\u00f6nnen Sie verschiedene Limits festlegen, z.B. wie lange eine VM nach dem Hochladen g\u00fcltig ist. Nach Ablauf dieses Zeitraums ist der Verantwortliche gezwungen, eine neue Version der VM hochzuladen. Damit k\u00f6nnen Sie das Ansammeln nicht mehr ben\u00f6tigter VMs eind\u00e4mmen. Weiterhin k\u00f6nnen Sie die maximale Anzahl gleichzeitiger Transfers pro Benutzer einschr\u00e4nken.",
     "lang_description_delete_images": "Diese Liste zeigt VMs, die entweder abgelaufen sind, oder deren Datei besch\u00e4digt, verschoben oder gel\u00f6scht wurde. Diese Images sind zur Zeit im Lehrpool nicht verf\u00fcgbar, ihre endg\u00fcltige L\u00f6schung muss aber manuell best\u00e4tigt werden, um gr\u00f6\u00dfere Katastrophen durch Softwarefehler, verstellte Systemuhren etc. zu vermeiden.",
+    "lang_dozmodLogHeading": "bwLehrpool-Suite Aktionslog",
     "lang_email": "EMail",
     "lang_emailNotifications": "EMail-Benachrichtigungen aktiviert",
     "lang_error": "Fehler",
+    "lang_event": "Ereignis",
     "lang_followingPlaceholdersUnused": "Folgende Platzhalter m\u00fcssen im Template verwendet werden",
     "lang_hasNewer": "Neuere Version existiert",
     "lang_heading": "Zu l\u00f6schende VM-Versionen",
     "lang_host": "Host",
     "lang_image": "VM",
+    "lang_lastEditor": "Zuletzt bearbeitet von",
     "lang_lastLogin": "Letzte Anmeldung",
+    "lang_lecture": "Veranstaltung",
     "lang_lecturePermissionAdmin": "Administration",
     "lang_lecturePermissionEdit": "Bearbeiten",
     "lang_loadDefaults": "Alle Texte auf Auslieferungszustand zur\u00fccksetzen",
@@ -36,6 +43,7 @@
     "lang_organization": "Einrichtung",
     "lang_organizationList": "Liste der Einrichtungen",
     "lang_organizationListHeader": "Nutzungsrechte f\u00fcr den Satelliten festlegen",
+    "lang_os": "Betriebssystem",
     "lang_owner": "Besitzer",
     "lang_password": "Passwort",
     "lang_placeholders": "Platzhalter",
@@ -54,15 +62,19 @@
     "lang_sslNone": "Kein SSL",
     "lang_subHeading": "Images, die abgelaufen oder besch\u00e4digt sind",
     "lang_superUser": "Ist SuperUser (darf alle Veranstaltungen und VMs bearbeiten\/l\u00f6schen)",
+    "lang_system": "System",
     "lang_template": "Template",
     "lang_templatePageDescription": "Hier k\u00f6nnen Sie die Textbausteine bearbeiten, aus denen die Mails generiert werden, die der bwLehrpool-Server bez\u00fcglich Virtueller Maschinen und Veranstaltungen versendet. Diese Funktionalit\u00e4t unterst\u00fctzt zur Zeit keine Internationalisierung.",
     "lang_test": "Test-Mail senden",
     "lang_testConfiguration": "Um die Konfiguration zu testen, geben Sie hier eine Empf\u00e4ngeradresse ein",
     "lang_testRecipient": "Empf\u00e4nger",
+    "lang_updateTime": "Letzte Bearbeitung",
     "lang_user": "Benutzername",
+    "lang_userId": "Benutzer-ID",
     "lang_userList": "Benutzerliste",
     "lang_userListDescription": "Hier k\u00f6nnen Sie individuelle Nutzer zu \"Super-Usern\" machen. Diese haben im Dozentenmodul auf alle Veranstaltungen und VMs Vollzugriff, unabh\u00e4ngig von den gesetzten Berechtigungen. Au\u00dferdem k\u00f6nnen Sie hier Benutzer vom Zugriff mittels des Dozentenmoduls ausschlie\u00dfen.",
     "lang_userListHeader": "Dem Satelliten bekannte Benutzer",
     "lang_username": "Benutzername (SMTP-Auth)",
-    "lang_version": "Version vom"
+    "lang_version": "Version vom",
+    "lang_when": "Wann"
 }
