--- a/modules-available/dozmod/lang/en/template-tags.json
+++ b/modules-available/dozmod/lang/en/template-tags.json
@@ -1,6 +1,9 @@
 {
+    "lang_actionTarget": "Action target",
     "lang_asteriskRequired": "Fields marked with (*) are required",
     "lang_canLogin": "Members of this organization can login",
+    "lang_createTime": "Created",
+    "lang_currentFilter": "Current filter",
     "lang_defaultImagePermissionAdmin": "Administrate",
     "lang_defaultImagePermissionDownload": "Download",
     "lang_defaultImagePermissionEdit": "Edit",
@@ -13,15 +16,19 @@
     "lang_descriptionPermissionConfig": "These are the default permissions being used for VMs and lectures if the owner does not specify any.",
     "lang_descriptionRuntimeLimits": "Here you can define some limits, e.g. how long a newly uploaded VM will be valid. This should make sure that you don't end up with a lot of old, unused VMs over time.",
     "lang_description_delete_images": "This is a list of VMs that either expired, or where the disk image is damaged or missing. These VMs are not available in bwLehrpool currently, but you have to manually confirm the deletion of the disk images for safety reasons (clock skew etc.)",
+    "lang_dozmodLogHeading": "bwLehrpool-Suite action log",
     "lang_email": "E-Mail",
     "lang_emailNotifications": "E-Mail notifications enabled",
     "lang_error": "Error",
+    "lang_event": "Event",
     "lang_followingPlaceholdersUnused": "The following placeholders are not being used",
     "lang_hasNewer": "Newer version exists",
     "lang_heading": "Images marked for deletion",
     "lang_host": "Host",
     "lang_image": "VM",
+    "lang_lastEditor": "Edited by",
     "lang_lastLogin": "Last login",
+    "lang_lecture": "Lecture",
     "lang_lecturePermissionAdmin": "Administrate",
     "lang_lecturePermissionEdit": "Edit",
     "lang_loadDefaults": "Reset all templates to their defaults",
@@ -36,6 +43,7 @@
     "lang_organization": "Organization",
     "lang_organizationList": "List of organizations",
     "lang_organizationListHeader": "Set access permissions for organizations",
+    "lang_os": "Operating System",
     "lang_owner": "Owner",
     "lang_password": "Password",
     "lang_placeholders": "Placeholders",
@@ -54,15 +62,19 @@
     "lang_sslNone": "No SSL",
     "lang_subHeading": "Expired or damaged images",
     "lang_superUser": "Is super user (can edit\/delete all lectures and VMs)",
+    "lang_system": "System",
     "lang_template": "Template",
     "lang_templatePageDescription": "Here you can edit text fragments that are used to compose the information and reminder mails sent by the bwLehrpool server, e.g. when a lecture or VM is about to expire.",
     "lang_test": "Send test mail",
     "lang_testConfiguration": "To test the configuration, enter a recipient address here",
     "lang_testRecipient": "Recipient",
+    "lang_updateTime": "Last update",
     "lang_user": "User name",
+    "lang_userId": "User id",
     "lang_userList": "User list",
     "lang_userListDescription": "Here you can promote \"super users\", which will have all permissions in the \"Dozenzenmodul\". You can also ban users from accessing this server via the \"Dozentenmodul\".",
     "lang_userListHeader": "Users known to this satellite",
     "lang_username": "User name (SMTP auth)",
-    "lang_version": "Version timestamp"
+    "lang_version": "Version timestamp",
+    "lang_when": "When"
 }
