[dozmod] Update translations

--- a/modules-available/dozmod/lang/de/template-tags.json
+++ b/modules-available/dozmod/lang/de/template-tags.json
@@ -1,6 +1,7 @@
 {
     "lang_actionTarget": "Aktionsziel",
     "lang_asteriskRequired": "Felder mit (*) sind erforderlich",
+    "lang_blockCount": "Anzahl Bl\u00f6cke",
     "lang_canLogin": "Nutzer dieser Einrichtung k\u00f6nnen sich am Satelliten anmelden",
     "lang_createTime": "Erstellt",
     "lang_currentFilter": "Aktueller Filter",
@@ -21,8 +22,10 @@
     "lang_emailNotifications": "EMail-Benachrichtigungen aktiviert",
     "lang_error": "Fehler",
     "lang_event": "Ereignis",
+    "lang_fileSize": "Dateigr\u00f6\u00dfe",
     "lang_followingPlaceholdersUnused": "Folgende Platzhalter m\u00fcssen im Template verwendet werden",
     "lang_hasNewer": "Neuere Version existiert",
+    "lang_hash": "Hash",
     "lang_heading": "Zu l\u00f6schende VM-Versionen",
     "lang_host": "Host",
     "lang_image": "VM",
@@ -56,6 +59,7 @@
     "lang_senderAddress": "Absenderadresse",
     "lang_senderName": "Absender Anzeigename",
     "lang_size": "Gr\u00f6\u00dfe",
+    "lang_spaceWastedDuplication": "Potentiell durch mehrfach vorkommende Bl\u00f6cke belegter Speicherplatz",
     "lang_ssl": "SSL-Modus",
     "lang_sslExplicit": "Explizites SSL (\"STARTTLS\")",
     "lang_sslImplicit": "Implizites SSL",
