--- a/modules-available/dozmod/lang/en/template-tags.json
+++ b/modules-available/dozmod/lang/en/template-tags.json
@@ -1,6 +1,7 @@
 {
     "lang_actionTarget": "Action target",
     "lang_asteriskRequired": "Fields marked with (*) are required",
+    "lang_blockCount": "Block count",
     "lang_canLogin": "Members of this organization can login",
     "lang_createTime": "Created",
     "lang_currentFilter": "Current filter",
@@ -21,8 +22,10 @@
     "lang_emailNotifications": "E-Mail notifications enabled",
     "lang_error": "Error",
     "lang_event": "Event",
+    "lang_fileSize": "File size",
     "lang_followingPlaceholdersUnused": "The following placeholders are not being used",
     "lang_hasNewer": "Newer version exists",
+    "lang_hash": "Hash",
     "lang_heading": "Images marked for deletion",
     "lang_host": "Host",
     "lang_image": "VM",
@@ -56,6 +59,7 @@
     "lang_senderAddress": "Sender address",
     "lang_senderName": "Sender's display name",
     "lang_size": "Size",
+    "lang_spaceWastedDuplication": "Potentially wasted space by duplicate blocks",
     "lang_ssl": "SSL mode",
     "lang_sslExplicit": "Explicit SSL (\"STARTTLS\")",
     "lang_sslImplicit": "Implicit SSL",
