--- a/modules-available/sysconfig/lang/de/template-tags.json
+++ b/modules-available/sysconfig/lang/de/template-tags.json
@@ -20,7 +20,8 @@
     "lang_computerLoad": "Bild von lokalem Rechner hochladen",
     "lang_configLocationLong": "Diese Konfiguration ist einem oder mehreren Orten direkt zugewiesen. Es werden nur direkt betroffene R\u00e4ume ber\u00fccksichtigt.",
     "lang_configuration": "Konfiguration",
-    "lang_configurationActive": "Konfiguration aktivieren",
+    "lang_configurationActivateLater": "Sp\u00e4ter aktivieren",
+    "lang_configurationActive": "Konfiguration jetzt aktivieren",
     "lang_configurationChoose": "Bitte w\u00e4hlen Sie, welche Module f\u00fcr diese Konfiguration verwendet werden sollen.",
     "lang_configurationModuleNotFound": "Keine Konfigurationsmodule gefunden!",
     "lang_configurationSuccess": "Die Konfiguration wurde erfolgreich erstellt.",
