--- a/modules-available/sysconfig/lang/en/template-tags.json
+++ b/modules-available/sysconfig/lang/en/template-tags.json
@@ -20,7 +20,8 @@
     "lang_computerLoad": "Load image from local computer",
     "lang_configLocationLong": "This configuration is directly assigned to one or more location. This counter will not include sub-location that might inherit this configuration.",
     "lang_configuration": "Configuration",
-    "lang_configurationActive": "Enable configuration",
+    "lang_configurationActivateLater": "Activate later",
+    "lang_configurationActive": "Enable configuration now",
     "lang_configurationChoose": "Please select which modules will be used for this configuration.",
     "lang_configurationModuleNotFound": "Configuration module not found!",
     "lang_configurationSuccess": "The configuration has been successfully created.",
