[roomplanner] Sanity checks/fixups when saving computers, more user feedback, smaller grid

--- a/modules-available/roomplanner/lang/de/template-tags.json
+++ b/modules-available/roomplanner/lang/de/template-tags.json
@@ -18,6 +18,7 @@
     "lang_classroomtable": "Klassenzimmertisch",
     "lang_coatrack": "Garderobe",
     "lang_conferencetable": "Konferenztisch",
+    "lang_confirmDiscardChanges": "Wollen Sie alle \u00c4nderungen verwerfen?",
     "lang_couch": "Couch",
     "lang_descriptionBySearch": "Hier k\u00f6nnen aus der Liste aller bekannter Rechner suchen.",
     "lang_descriptionBySubnet": "Hier sehen Sie Computer, die sich in den zum Raum geh\u00f6renden Subnetzen befinden.",
@@ -31,6 +32,8 @@
     "lang_locker": "Schlie\u00dffach",
     "lang_papertray": "Papierkorb",
     "lang_photocopier": "Kopierer",
+    "lang_planBeingSaved": "Der Raumplan wird gespeichert...",
+    "lang_planSuccessfullySaved": "Plan erfolgreich gespeichert!",
     "lang_plant": "Pflanze",
     "lang_podium": "Podium",
     "lang_printer": "Drucker",
