--- a/modules-available/roomplanner/lang/en/template-tags.json
+++ b/modules-available/roomplanner/lang/en/template-tags.json
@@ -18,6 +18,7 @@
     "lang_classroomtable": "classroom table",
     "lang_coatrack": "coatrack",
     "lang_conferencetable": "conference table",
+    "lang_confirmDiscardChanges": "Do you want to discard all changes?",
     "lang_couch": "couch",
     "lang_descriptionBySearch": "Select a computer from a list of all known computers here.",
     "lang_descriptionBySubnet": "Select a computer from a related subnet.",
@@ -31,6 +32,8 @@
     "lang_locker": "locker",
     "lang_papertray": "papertray",
     "lang_photocopier": "photocopier",
+    "lang_planBeingSaved": "Saving room layout",
+    "lang_planSuccessfullySaved": "Layout successfully saved!",
     "lang_plant": "plant",
     "lang_podium": "podium",
     "lang_printer": "printer",
