[sysconfig] Improve design, hide more controls in location-specific view, get rid of JS hack for ellipsis in tables (by adding a HTML/CSS hack for it :))

--- a/modules-available/sysconfig/lang/de/template-tags.json
+++ b/modules-available/sysconfig/lang/de/template-tags.json
@@ -1,5 +1,6 @@
 {
     "lang_activate": "Aktivieren",
+    "lang_activateGlobally": "Als globale Konfiguration setzen",
     "lang_active": "Aktiv",
     "lang_adStarted": "Der AD-Proxy wird nun konfiguriert und gestartet...",
     "lang_adText1": "Zum Einrichten der Benutzerauthentifizierung \u00fcber ein Active Directory wird neben der Adresse des anzusprechenden Servers ein dedizierter Benutzer im AD ben\u00f6tigt, \u00fcber welchen das AD angesprochen wird. Der Benutzer sollte in der gleichen Dom\u00e4ne sein, wie die Benutzer, die sich sp\u00e4ter an den Arbeitsstationen anmelden werden. Ansonsten ist es notwendig, die Suchbasis anzugeben.",
@@ -12,6 +13,7 @@
     "lang_asteriskMandatory": "Mit (*) gekennzeichnete Felder sind Pflichtfelder",
     "lang_availableModules": "Verf\u00fcgbare Konfigurationsmodule",
     "lang_availableSystem": "Verf\u00fcgbare Systemkonfigurationen",
+    "lang_backToSysconfig": "Zur\u00fcck zur \u00dcbersicht",
     "lang_bindDN": "Bind DN",
     "lang_branding": "Hier k\u00f6nnen Sie ihr Einrichtungslogo im SVG-Format hochladen. Das SVG-Format ist ein Vektorgrafikformat, was zum Skalieren vorteilhaft ist. Eine gute Quelle f\u00fcr SVG-Logos von Unis und Hochschulen ist ihr jeweiliger Wikipedia-Artikel.",
     "lang_brandingInfo": "Unten sehen Sie zur Kontrolle noch einmal das ausgew\u00e4hlte Logo. Sollten Sie das Logo nicht sehen k\u00f6nnen, pr\u00fcfen Sie bitte, ob Sie ein valides SVG-Bild verwendet haben. Alternativ ist es m\u00f6glich, dass beim Verarbeiten des Bildes ein Fehler auftrat. Sie k\u00f6nnen daher das Modul trotzdem speichern und testen, ob das Logo im bwLehrpool-System angezeigt wird.",
@@ -20,8 +22,6 @@
     "lang_computerLoad": "Bild von lokalem Rechner hochladen",
     "lang_configLocationLong": "Diese Konfiguration ist einem oder mehreren Orten direkt zugewiesen. Es werden nur direkt betroffene R\u00e4ume ber\u00fccksichtigt.",
     "lang_configuration": "Konfiguration",
-    "lang_configurationActivateLater": "Sp\u00e4ter aktivieren",
-    "lang_configurationActive": "Konfiguration jetzt aktivieren",
     "lang_configurationChoose": "Bitte w\u00e4hlen Sie, welche Module f\u00fcr diese Konfiguration verwendet werden sollen.",
     "lang_configurationModuleNotFound": "Keine Konfigurationsmodule gefunden!",
     "lang_configurationSuccess": "Die Konfiguration wurde erfolgreich erstellt.",
@@ -46,6 +46,7 @@
     "lang_homeAttr": "Home-Attribut",
     "lang_homeAttributeExplanation": "Bitte w\u00e4hlen Sie das Attribut, welches das Home-Verzeichnis der User enth\u00e4lt.",
     "lang_homedirHandling": "(Home-)Verzeichnis Einbindung",
+    "lang_inheritFromParentLoc": "Von \u00fcbergeordnetem Ort erben",
     "lang_ldapStarted": "Der LDAP-Proxy wurde gestartet",
     "lang_ldapText1": "Mit diesem Wizard k\u00f6nnen Sie Authentifizierung gegen einen LDAP-Server einrichten.",
     "lang_ldapText2": "Zu diesem Zweck wird ein LDAP-Proxy auf dem Satelliten-Server gestartet. Dies bedeutet, dass der LDAP-Server von diesem Server aus erreichbar sein muss. Die Pool-PCs hingegen m\u00fcssen nicht direkt mit dem LDAP-Server kommunizieren k\u00f6nnen.",
