--- a/modules-available/sysconfig/lang/en/template-tags.json
+++ b/modules-available/sysconfig/lang/en/template-tags.json
@@ -1,5 +1,6 @@
 {
     "lang_activate": "Activate",
+    "lang_activateGlobally": "Set as global\/default configuration",
     "lang_active": "Active",
     "lang_adStarted": "The AD-proxy is now configured and started ...",
     "lang_adText1": "To set up user authentication through Active Directory, a dedicated user is required in AD next to the address of the server, which is addressed by the AD.",
@@ -12,6 +13,7 @@
     "lang_asteriskMandatory": "Fields marked with (*) are mandatory",
     "lang_availableModules": "Available Configuration Modules",
     "lang_availableSystem": "Available System Configuration",
+    "lang_backToSysconfig": "Back to config overview",
     "lang_bindDN": "Bind DN",
     "lang_branding": "For best results, you should upload the logo in SVG format. SVG is a vector graphics format, which is advantageous for scaling. A good source for SVG logos of universities and colleges is their respective Wikipedia article.",
     "lang_brandingInfo": "Below you can check the selected logo. If you can not see the logo, please check whether you have used a valid SVG image. Alternatively, it is possible that during processing of the image, an error occurred. Therefore, you can save the module anyway and test whether the logo is displayed in the bwLehrpool system.",
@@ -20,8 +22,6 @@
     "lang_computerLoad": "Load image from local computer",
     "lang_configLocationLong": "This configuration is directly assigned to one or more location. This counter will not include sub-location that might inherit this configuration.",
     "lang_configuration": "Configuration",
-    "lang_configurationActivateLater": "Activate later",
-    "lang_configurationActive": "Enable configuration now",
     "lang_configurationChoose": "Please select which modules will be used for this configuration.",
     "lang_configurationModuleNotFound": "Configuration module not found!",
     "lang_configurationSuccess": "The configuration has been successfully created.",
@@ -46,6 +46,7 @@
     "lang_homeAttr": "Home attribute",
     "lang_homeAttributeExplanation": "Please select the attribute which holds the user's home directory.",
     "lang_homedirHandling": "(Home) directory handling",
+    "lang_inheritFromParentLoc": "Inherit from parent location",
     "lang_ldapStarted": "The LDAP proxy has been launched",
     "lang_ldapText1": "Here you can create a configuration module to authenticate agains an LDAP server",
     "lang_ldapText2": "An LDAP-Proxy will be launched on this server. This means the LDAP-Server must be reachable from it. The client PCs in the labs however don't have to be able to talk to the LDAP server \u2013 they will use the proxy running on this server.",
