--- a/modules-available/exams/lang/en/template-tags.json
+++ b/modules-available/exams/lang/en/template-tags.json
@@ -3,9 +3,11 @@
     "lang_addExam": "Add exam period",
     "lang_addingBasedOnLecture": "Adding exam period based on lecture",
     "lang_allExamPeriods": "All exam periods",
-    "lang_autoStartInfo": "Here you can select a course that will be launched automatically after the client finishes booting up. This will skip the login prompt and vmChooser screen, and directly start the selected couse. In this case, no personalization like mapping of home directories can happen in the VM, so this is mostly useful if the exam relies on other means of authentication, e.g. logging in to an LMS system where results need to be submitted.",
+    "lang_autoLogin": "Skip login",
+    "lang_autoLoginInfo": "If this option is enabled, the login mask will not be shown and instead, an anonymous session is opened. This is useful if there is another authentication mechanism in place inside the VM, e.g. web-based (LMS). The user will see the vmChooser right away after booting up the computer. You can combine this option with the \"Automatically launched course\" feature, so the boot process is completely automated. Note that when using \"skip login\", no personalization like mapping of home directories is possible inside the VM without additional actions by the user and\/or creator of the VM.",
+    "lang_autoStartInfo": "Here you can select a course that will be launched automatically after the user logged in. This will skip the vmChooser screen, and directly start the couse selected here. This function can be combined with the \"skip login\" feature to further automate the boot-up process.",
     "lang_autoStartLecture": "Automatically launched course",
-    "lang_autostart": "Autorun lecture",
+    "lang_autostart": "Auto-run course",
     "lang_begin": "Begin",
     "lang_begin_date": "Begin Date",
     "lang_begin_time": "Time",
