--- a/modules-available/main/lang/de/template-tags.json
+++ b/modules-available/main/lang/de/template-tags.json
@@ -1,4 +1,5 @@
 {
+    "lang_changePassword": "Passwort \u00e4ndern",
     "lang_goTo": "Gehe zu",
     "lang_intro": "Dies ist die bwLehrpool Konfigurationsoberfl\u00e4che.",
     "lang_introGuest": "Dies ist das Administrations-Interface der lokalen bwLehrpool-Installation. Bitte authentifizieren Sie sich, um Einstellungen vorzunehmen.",
