--- a/modules-available/roomplanner/lang/de/template-tags.json
+++ b/modules-available/roomplanner/lang/de/template-tags.json
@@ -20,6 +20,7 @@
     "lang_conferencetable": "Konferenztisch",
     "lang_confirmDiscardChanges": "Wollen Sie alle \u00c4nderungen verwerfen?",
     "lang_couch": "Couch",
+    "lang_dedicatedManager": "Exklusiv",
     "lang_descriptionBySearch": "Hier k\u00f6nnen aus der Liste aller bekannter Rechner suchen.",
     "lang_descriptionBySubnet": "Hier sehen Sie Computer, die sich in den zum Raum geh\u00f6renden Subnetzen befinden.",
     "lang_deskLamp": "Tischlampe",
@@ -30,6 +31,7 @@
     "lang_labelBySubnet": "Rechner im Subnetz",
     "lang_lecturetheaterrow": "Stuhlreihe",
     "lang_locker": "Schlie\u00dffach",
+    "lang_managerIp": "PVS-Manager IP",
     "lang_papertray": "Papierkorb",
     "lang_photocopier": "Kopierer",
     "lang_planBeingSaved": "Der Raumplan wird gespeichert...",
