--- a/modules-available/roomplanner/lang/en/template-tags.json
+++ b/modules-available/roomplanner/lang/en/template-tags.json
@@ -20,6 +20,7 @@
     "lang_conferencetable": "conference table",
     "lang_confirmDiscardChanges": "Do you want to discard all changes?",
     "lang_couch": "couch",
+    "lang_dedicatedManager": "Dedicated",
     "lang_descriptionBySearch": "Select a computer from a list of all known computers here.",
     "lang_descriptionBySubnet": "Select a computer from a related subnet.",
     "lang_deskLamp": "desk lamp",
@@ -30,6 +31,7 @@
     "lang_labelBySubnet": "computers in subnet",
     "lang_lecturetheaterrow": "lecture theater row",
     "lang_locker": "locker",
+    "lang_managerIp": "PVS manager IP",
     "lang_papertray": "papertray",
     "lang_photocopier": "photocopier",
     "lang_planBeingSaved": "Saving room layout",
