[statistics] Fix currentuser filter

--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -7,6 +7,7 @@
     "lang_cores": "Kerne",
     "lang_cpuCores": "CPU-Kerne",
     "lang_cpuModel": "CPU",
+    "lang_currentUser": "Aktueller\/Letzter Benutzer",
     "lang_details": "Details",
     "lang_devices": "Ger\u00e4te",
     "lang_duration": "Dauer",
