--- a/modules-available/statistics/lang/en/template-tags.json
+++ b/modules-available/statistics/lang/en/template-tags.json
@@ -7,6 +7,7 @@
     "lang_cores": "Cores",
     "lang_cpuCores": "CPU cores",
     "lang_cpuModel": "CPU",
+    "lang_currentUser": "Current\/last user",
     "lang_details": "Details",
     "lang_devices": "Devices",
     "lang_duration": "Duration",
