[locations] Show percent of occupied machines per location

--- a/modules-available/locations/lang/de/template-tags.json
+++ b/modules-available/locations/lang/de/template-tags.json
@@ -18,6 +18,7 @@
     "lang_locationSettings": "Raum\/Ort bearbeiten",
     "lang_locationsMainHeading": "Verwaltung von R\u00e4umen\/Orten",
     "lang_machineCount": "Rechner",
+    "lang_machineLoad": "Besetzt",
     "lang_matchingMachines": "Enthaltene Rechner",
     "lang_name": "Name",
     "lang_noParent": "Kein \u00fcbergeordneter Ort",
