--- a/modules-available/locations/lang/en/template-tags.json
+++ b/modules-available/locations/lang/en/template-tags.json
@@ -18,6 +18,7 @@
     "lang_locationSettings": "Edit this room or location",
     "lang_locationsMainHeading": "Manage rooms and locations",
     "lang_machineCount": "Clients",
+    "lang_machineLoad": "In use",
     "lang_matchingMachines": "Matching clients",
     "lang_name": "Name",
     "lang_noParent": "No parent",
